--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -38,6 +38,7 @@ pages:
   - 'Wi-Fi (Antenna placement)': 'hardware/wifi.md'
   - 'Scheme': 'hardware/scheme.md'
   - '3D models': 'hardware/3dmodels.md'
+  - 'Power module': 'hardware/power-module.md'
 - Flying with QGroundControl: 
   - 'Frame configuration': 'qgc/frame.md'
   - 'Calibration': 'qgc/calibration.md'
