hardware: scheme -> vibro

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -36,7 +36,7 @@ pages:
   - 'Edge GNSS': 'hardware/gnss.md'
   - 'Camera': 'hardware/camera.md'
   - 'Wi-Fi (Antenna placement)': 'hardware/wifi.md'
-  - 'Scheme': 'hardware/scheme.md'
+  - 'Vibration damp': 'hardware/vibro.md'
   - '3D models': 'hardware/3dmodels.md'
   - 'Power module': 'hardware/power-module.md'
 - Flying with QGroundControl: 
