qgc: add stubs for new sections
These are stubs that are going to be populated in later PRs.

- Arming checks
- Failsafe
- Logging
- RC Input and Output
- Troubleshooting

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -44,8 +44,14 @@ pages:
   - 'Frame configuration': 'qgc/frame.md'
   - 'Calibration': 'qgc/calibration.md'
   - 'Connection': 'qgc/connection.md'
+  - 'Arming checks': 'qgc/arming-checks.md'
+  - 'Flight modes': 'qgc/flight-modes.md'
+  - 'Failsafe': 'qgc/failsafe.md'
+  - 'Logging': 'qgc/logging.md'
+  - 'RC Input and Output': 'qgc/rcinput-and-output.md'
   - 'Video streaming': 'qgc/video.md'
   - 'Additional parameters': 'qgc/parameters.md'
+  - 'Troubleshooting': 'qgc/troubleshooting.md'
 - LED status: 'led-status.md'
 - Specifications: 
   - 'Mechanical': 'specs/mechanical.md'
