hardware: add mounting docs

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -38,6 +38,7 @@ pages:
   - 'Wi-Fi (Antenna placement)': 'hardware/wifi.md'
   - '3D models': 'hardware/3dmodels.md'
   - 'Power module': 'hardware/power-module.md'
+  - 'Mounting': 'hardware/mounting.md'
 - Optional Accessories:
   - 'Vibration damping': 'accessories/vibro.md'
 - Flying with QGroundControl: 
