reach-integration: added Reach integration tutorial

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -62,5 +62,7 @@ pages:
   - 'Mechanical': 'specs/mechanical.md'
   - 'Electrical': 'specs/electrical.md'
   - 'Features': 'specs/features.md'
+- Tutorials:
+  - 'Reach integration': 'tutorials/reach-integration.md'
 
 
